2011-02-27  Banlu Kemiyatorn <object@gmail.com>

	* Source/NSOperation.m: Fix error checking condition for dependencies.

2011-02-27  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Look for gc.h in gc subdirectory
	* configure: regenerate
	* Headers/Additions/GNUstepBase/config.h.in: regenerate
	* Source/GNUmakefile: Don't attempt to build GSBlocks.m until it works
	without causing link failures.
	* Source/NSPortCoder.m:
	* Source/NSKeyedArchiver.m:
	* Source/NSGarbageCollector.m:
	* Source/NSZone.m:
	* Source/GSDictionary.m:
	* Source/GSCountedSet.m:
	* Source/NSNotificationCenter.m:
	* Source/GSAttributedString.m:
	* Source/NSObject.m:
	* Source/NSConcreteMapTable.m:
	* Source/Additions/GSMime.m:
	* Source/Additions/GSObjCRuntime.m:
	* Source/GSSet.m:
	* Source/NSConnection.m:
	* Source/NSThread.m:
	* Source/NSConcreteHashTable.m:
	Modify location of gc.h header.

2011-02-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/ObjectiveC2/runtime.c:
	* Headers/Additions/GNUstepBase/preface.h.in:
	* Headers/Additions/GNUstepBase/GSObjCRuntime.h:
	Remove last vestiges of runtime specific memory allocation apart from
	obsolete macros (marked as deprecated).

2011-02-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDecimal.m:
	Fix NaN comparison in GSDecimalCompare()
	* Source/NSNumber.m:
	Better match OSX for double comparison.

2011-02-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNumber.m:
	Fix error in float comparison.

2011-02-24 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSUserDefaults.m
	* Source/NSKeyValueObserving.m:
	Fix typos.

2011-02-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source\NSCalendarDate.m:
	* Source\NSArray.m:
	* Source\NSDebug.m:
	* Source\NSCalendar.m:
	* Source\NSURLResponse.m:
	* Source\NSObject.m:
	* Source\NSDecimalNumber.m:
	* Source\Additions\GSMime.m:
	* Source\NSDateFormatter.m:
	* Source\NSDate.m:
	* Source\NSDictionary.m:
	* Source\NSSet.m:
	* Headers\Foundation\NSCalendarDate.h: